# Multi_cam_calib

./: CMakeLists.txt  Multi_cam_calib_main.cpp  README.md
EC22/01/: 0-1-1-0.txt  0-1-1-1.txt  0-1-2-0.txt  0-1-2-1.txt
EC22/12/: 1-2-1-1.txt  1-2-1-2.txt  1-2-2-1.txt  1-2-2-2.txt
EC22/23/: 2-3-1-2.txt  2-3-1-3.txt  2-3-2-2.txt  2-3-2-3.txt
EC22/34/: 3-4-1-3.txt  3-4-1-4.txt  3-4-2-3.txt  3-4-2-4.txt  34-1-3.txt
EC22/40/: 4-0-1-0.txt  4-0-1-4.txt  4-0-2-0.txt  4-0-2-4.txt
EC22/IN/: calib_results0.txt  calib_results1.txt  calib_results2.txt  calib_results3.txt  calib_results4.txt
include/: cameramodel.h  exincalib.h
src/: cameramodel.cc  exincalib.cc
